# learning-spark

./: Makefile  README.md  main.py  pyproject.toml  streaming.py
src/spark_configuration/: README.md  main.py
