[project]
name = "learning-spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyspark>=4.0.0",
    "minio>=7.1.0",
    "kafka-python>=2.0.2",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
]
